# webportal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  STEALTH_FEATURES.md  TODO.md  agent.py  basic_example.md  crawl4ai_test.md  debug-commands.md  deploy-job.sh  deploy-setup.md  docker-compose.yml  enhanced_page_analysis.md  final_page_analysis.md  github.com(2)_api_calls.md  github.com_api_calls.md  graphql_test.py  har_extractor.py  har_to_md.py  job.yaml  json_to_tools.py  lovable_prompt.md  network_example.md  page_analysis.md  prompt.md  pyproject.toml  test_github_api.py  tools.py  tools_test.py  utils.py
.github/workflows/: deploy-frontend.yml
api_json/: github2.json  json_analysis.py  test.json
api_tools/: test.py
benchmark/: gather_gaia_tough_questions.py  run_benchmark.py  tough_questions.json
data/: interactive_elements.md
digested_websites/: airfrance.md  count_api.py  github.md  github_generated.md  interactive_elements.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: .env.example  App.tsx  index.css
har_data/: github.com.har
scripts/: deploy-local.sh
src/webportal/: __init__.py  cli.py  common.py  debug_discovery.py  discover_elements.py  enhanced_discovery.py  example.py  inference.py  ingest.py  input.md  network_crawler.py  run_jobs.py  secret_manager.py  storage_utils.py  test_basic.py  utils.py  web_crawler.py
tests/: markdown.md  test_grid_multiprocessing.py  test_request_html.py  test_requests_graphql.py  test_selenium.py  test_sitemap_crawl.py  test_tree_display.py
(+43 files in other folders)
