[project]
name = "webportal"
version = "0.1.0"
description = "Web Portal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7.1",
    "dotenv>=0.9.9",
    "smolagents>=1.20.0",
    "selenium>=4.15.0",
    "playwright>=1.40.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
