[project]
name = "webportal"
version = "0.1.0"
description = "Web Portal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "crawl4ai>=0.7.1",
    "dotenv>=0.9.9",
    "markdownify>=1.1.0",
    "smolagents>=1.20.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
