[project]
name = "webportal"
version = "0.1.0"
description = "Web Portal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "dotenv>=0.9.9",
    "markdownify>=1.1.0",
    "selenium>=4.15.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "smolagents[litellm,openai,toolkit]>=1.20.0",
    "huggingface-hub>=0.33.4",
    "pillow>=11.3.0",
    "datasets>=4.0.0",
    "pytest>=8.4.1",
    "tqdm>=4.66.0",
    "ruff>=0.12.4",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "browser-use>=0.5.5",
]
